<resources>
<<<<<<< HEAD
    <string name="save">Save</string>
    <string name="title">Title</string>
    <string name="content">Content</string>
    <string name="enter_title">Enter Title</string>
    <string name="enter_content">Enter Content</string>
    <string name="app_name">JournalApp</string>
    <string name="action_settings">Settings</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="title_activity_note_detail">Note Details</string>
    <string name="add_note">Add Note</string>
    <string name="random_question">Random Journal Question</string>
    <string name="journal_prompt">What do you want to write about today?</string>
    <string name="confirm_question">Confirm Question</string>
    <string name="action_help">Help</string>
    <string name="action_logout">Logout</string>
    <string name="action_search">Search</string>
    <string name="get_advice">Get Advice</string>
    <string name="delete_selected">Delete Selected</string>
    <string name="menu_button">Menu Button</string>
    <string name="plus_button">Plus Button</string>
    <string name="refresh_button">Refresh</string>
    <string name="refresh">Refresh</string>


</resources>
=======
    <!-- App name -->
    <string name="app_name">JournalApp</string>

    <!-- General UI Labels -->
    <string name="save">Save</string>
    <string name="title">What do you want to write about today?</string>
    <string name="content">Content</string>
    <string name="journal_prompt">What do you want to write about today?</string>

    <!-- Placeholder Text -->
    <string name="title_hint">Title</string>
    <string name="content_hint">Start writing here...</string>

    <!-- Buttons -->
    <string name="save_button">Save</string>
    <string name="select_file_button">Select File or Image</string>
    <string name="confirm_question_button">Confirm Question</string>
    <string name="random_question_button">Show Question</string>

    <!-- File Management -->
    <string name="file_selected">File selected</string>
    <string name="image_selected">Image selected</string>
    <string name="no_file_selected">No file selected</string>
    <string name="file_preview">File Preview</string>
    <string name="file_name_placeholder">File Name</string>
    <string name="preview_image">Image or file preview</string>

    <!-- Menu Options -->
    <string name="action_settings">Settings</string>
    <string name="action_help">Help</string>
    <string name="action_logout">Logout</string>
    <string name="action_search">Search</string>
    <string name="refresh_button">Refresh</string>
    <string name="delete_selected">Delete Selected</string>

    <!-- Prompts and Errors -->
    <string name="random_question">Random Journal Question</string>
    <string name="confirm_question">Confirm Question</string>
    <string name="get_advice">Get Advice</string>
    <string name="menu_button">Menu</string>
    <string name="plus_button">Add Note</string>
    <string name="refresh">Refresh</string>

    <string name="title_activity_note_detail">Note Details</string>


    <string name="question_placeholder">Ask a question...</string>
    <string name="show_question_button">Show Question</string>
    <string name="enter_title">Enter Title</string>
    <string name="enter_content">Enter Content</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>

</resources>


>>>>>>> c86f773 (Reinitialize repository)
