<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <EditText
        android:id="@+id/titleInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_title"
        android:inputType="text"
        android:autofillHints="name" />

    <EditText
        android:id="@+id/contentInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_content"
        android:inputType="textMultiLine"
        android:autofillHints="textMultiLine" />

    <Button
        android:id="@+id/saveButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save" />
</LinearLayout>
